# ferro-http

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.embedded.json  docker-bake.hcl  docker-compose.yml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
bench/: README.md  bench.sh
crates/core/: Cargo.toml
crates/core/src/: asset.rs  compress.rs  config.rs  conn.rs  json.rs  lib.rs  router.rs  security.rs  service.rs
crates/core/src/handler/: mod.rs  query.rs  static_files.rs
crates/core/src/http/: conditional.rs  date.rs  method.rs  mime.rs  mod.rs  request.rs  response.rs  status.rs
crates/embedded/: Cargo.toml
crates/embedded-server/: Cargo.toml  memory.x
crates/embedded-server/.cargo/: config.toml
crates/embedded-server/assets/: config.json  index.html
crates/embedded-server/src/: main.rs
crates/embedded/src/: app.rs  lib.rs
crates/std-server/: Cargo.toml
crates/std-server/src/: app.rs  fs_assets.rs  fs_config.rs  main.rs  tls.rs  transport_mio.rs
crates/std-server/src/webui/: admin.rs  mod.rs  sha256.rs  stats.rs
crates/std-server/src/webui/assets/: panel.html
crates/std-server/src/webui/assets/i18n/: en.json  tr.json
docker/: config.json
docker/public/: index.html  style.css
