[workspace]
resolver = "2"
members = ["crates/core", "crates/std-server", "crates/embedded"]

# `crates/embedded` (ferro-embedded) holds the no_std smoltcp transport and is a
# host-buildable library, so its loopback transport test runs under `cargo test`.
# The bare-metal `embedded-server` binary (panic handler, allocator, entry point)
# is excluded from the workspace because it cannot link for the host target.

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
