[workspace]
resolver = "2"
members = ["crates/core", "crates/std-server", "crates/embedded"]
# The bare-metal `embedded-server` binary (panic handler, allocator, `#[entry]`)
# cannot link for the host target, so it is excluded from the workspace and built
# standalone for thumbv7em via its own `.cargo/config.toml`.
exclude = ["crates/embedded-server"]

# `crates/embedded` (ferro-embedded) holds the no_std smoltcp transport and is a
# host-buildable library, so its loopback transport test runs under `cargo test`.

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Size-optimized profile for tight embedded Linux targets (e.g. OpenWRT), where
# disk and RAM are scarce. Trades some throughput for a smaller binary and a bit
# less RAM (no unwind tables). Build with `cargo build --profile min-size`; the
# default `release` profile keeps opt-level=3 for the maximum-performance goal.
[profile.min-size]
inherits = "release"
opt-level = "z"
panic = "abort"
