[package]
name = "ferro-core"
description = "Allocation-only no_std HTTP core for the ferro web server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
miniz_oxide = { version = "0.9.1", default-features = false, features = ["with-alloc"], optional = true }

[features]
# Optional gzip response compression (off by default; pulls in miniz_oxide).
gzip = ["dep:miniz_oxide"]
