[package]
name = "ferro"
description = "A near-zero-dependency, multi-platform HTTP server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "ferro"
path = "src/main.rs"

[features]
# Optional gzip response compression (off by default).
gzip = ["ferro-core/gzip"]

[dependencies]
ferro-core = { path = "../core" }
mio = { version = "1.2.1", features = ["net", "os-poll"] }
signal-hook = "0.4.4"
socket2 = { version = "0.6.4", features = ["all"] }
