[package]
name = "ferro"
description = "A near-zero-dependency, multi-platform HTTP server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "ferro"
path = "src/main.rs"

[features]
# Optional gzip response compression (off by default).
gzip = ["ferro-core/gzip"]
# Optional TLS termination via rustls (off by default; grows the dep tree).
tls = ["dep:rustls", "dep:rustls-pemfile"]
# Optional embedded web admin panel (off by default; no extra dependencies).
webui = []

[dependencies]
ferro-core = { path = "../core" }
mio = { version = "1.2.1", features = ["net", "os-poll"] }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std", "tls12"], optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }
signal-hook = "0.4.4"
socket2 = { version = "0.6.4", features = ["all"] }
